fix: change email logo

--- a/KingfoodIO/wwwroot/html/system_message.html
+++ b/KingfoodIO/wwwroot/html/system_message.html
@@ -162,7 +162,7 @@
                                                                 style="padding-bottom:5px;padding-left:20px;padding-right:10px;">
                                                                 <div style="font-family: sans-serif">
                                                                     <div class
-                                                                        style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
+                                                                        style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
                                                                             <span style="font-size:50px;"><strong>System
@@ -234,7 +234,7 @@
                                                         <tr>
                                                             <td class="pad">
                                                                 <h1
-                                                                    style="margin: 0; color: #3fb9bc; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
+                                                                    style="margin: 0; color: #f08619; direction: ltr; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 38px; font-weight: 700; letter-spacing: normal; line-height: 120%; text-align: left; margin-top: 0; margin-bottom: 0;">
                                                                     <span
                                                                         class="tinyMce-placeholder">一个新的事件产生，请及时处理。</span>
                                                                 </h1>
@@ -267,7 +267,7 @@
                                                                 <div class="alignment" align="center">
                                                                     <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" style="height:42px;width:52px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#8a3c90"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
                                                                     <div
-                                                                        style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#3fb9bc; border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
+                                                                        style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#f08619; border-radius:4px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;text-align:center;mso-border-alt:none;word-break:keep-all;">
                                                                      <a href="http://127.0.0.1:2712/ordersAdmin?ref=@Model.Ref" style="color:white">   <span
                                                                             style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
                                                                                 dir="ltr"
@@ -390,7 +390,7 @@
                                 <td>
                                     <table class="row-content stack" align="center" border="0" cellpadding="0"
                                         cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #3fb9bc; color: #000000; width: 680px;"
+                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f08619; color: #000000; width: 680px;"
                                         width="680">
                                         <tbody>
                                             <tr>
@@ -479,9 +479,9 @@
                                                             <td class="pad"
                                                                 style="padding-bottom:20px;padding-left:10px;padding-right:10px;padding-top:10px;text-align:center;">
                                                                 <div class="alignment" align="center">
-                                                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:68px;width:285px;v-text-anchor:middle;" arcsize="52%" strokeweight="1.5pt" strokecolor="#FFFFFF" fillcolor="#3fb9bc"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#e8f4dc; font-family:Arial, sans-serif; font-size:22px"><![endif]-->
+                                                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:68px;width:285px;v-text-anchor:middle;" arcsize="52%" strokeweight="1.5pt" strokecolor="#FFFFFF" fillcolor="#f08619"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#e8f4dc; font-family:Arial, sans-serif; font-size:22px"><![endif]-->
                                                                     <a href="http://www.example.com/" target="_blank"
-                                                                       style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#3fb9bc;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;">
+                                                                       style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#f08619;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;">
                                                                         <span style="padding-left:45px;padding-right:45px;font-size:22px;display:inline-block;letter-spacing:normal;">
                                                                             <span dir="ltr"
                                                                                   style="word-break:break-word;">
