--- a/KingfoodIO/wwwroot/html/tour_ticket.html
+++ b/KingfoodIO/wwwroot/html/tour_ticket.html
@@ -132,7 +132,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:20px;padding-right:10px;">
 																<div style="font-family: sans-serif">
-																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
+																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
 																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:50px;"><strong>Enjoy your journey!</strong></span></p>
 																	</div>
 																</div>
@@ -177,8 +177,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:20px;">
 																<div style="font-family: sans-serif">
-																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #3fb9bc; line-height: 1.2;">
-																		<p style="margin: 0; font-size: 14px; mso-line-height-alt: 16.8px;"><span style="font-size:22px;color:#3fb9bc;">IreHolidays Ticket: &#8202; @Model.booking.Tour.TourInfo.NameEn</span></p>
+																	<div class style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
+																		<p style="margin: 0; font-size: 14px; mso-line-height-alt: 16.8px;"><span style="font-size:22px;color:#f08619;">IreHolidays Ticket: &#8202; @Model.booking.Tour.TourInfo.NameEn</span></p>
 																	</div>
 																</div>
 															</td>
@@ -204,8 +204,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#44b4b8;"><span style="font-size:20px;">TicketNo:</span></span></p>
+																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 21px;"><span style="color:#f08619;"><span style="font-size:20px;">TicketNo:</span></span></p>
 																	</div>
 																</div>
 															</td>
@@ -217,7 +217,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
+																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 12px; mso-line-height-alt: 33px;"><span style="font-size:22px;">@Model.booking.Ref</span></p>
 																	</div>
 																</div>
@@ -273,8 +273,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#44b4b8;">Boarding Time:</span></p>
+																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Boarding Time:</span></p>
 																	</div>
 																</div>
 															</td>
@@ -286,7 +286,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
+																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">@Model.booking.SelectDate</span></p>
 																	</div>
 																</div>
@@ -342,8 +342,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#44b4b8;">Boarding Location:</span></p>
+																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Boarding Location:</span></p>
 																	</div>
 																</div>
 															</td>
@@ -355,7 +355,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
+																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">North Cumberland Street, Dublin 1</span></p>
 																	</div>
 																</div>
@@ -411,8 +411,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#44b4b8;">Info:</span></p>
+																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Info:</span></p>
 																	</div>
 																</div>
 															</td>
@@ -424,7 +424,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
+																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
 																			<span style="font-size:16px;">@Model.booking.Name</span></p>
 																			<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
@@ -485,8 +485,8 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#44b4b8;">Time</span></p>
+																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Time</span></p>
 																	</div>
 																</div>
 															</td>
@@ -498,7 +498,7 @@
 														<tr>
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: Arial, sans-serif">
-																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #3a4848; line-height: 1.5;">
+																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;"><span style="font-size:16px;">@Model.booking.Created</span></p>
 																	</div>
 																</div>
@@ -553,34 +553,11 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="row row-15" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 680px;" width="680">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
-																<div class="alignment" align="center" style="line-height:10px"><img class="big" src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1741/blue-top.png" style="display: block; height: auto; border: 0; width: 680px; max-width: 100%;" width="680" alt="Image" title="Image"></div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
 					<table class="row row-16" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #3fb9bc; color: #000000; width: 680px;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f08619; color: #000000; width: 680px;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
@@ -632,30 +609,7 @@
 													<table class="button_block block-4" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="padding-bottom:20px;padding-left:10px;padding-right:10px;padding-top:10px;text-align:center;">
-																<div class="alignment" align="center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:68px;width:237px;v-text-anchor:middle;" arcsize="52%" strokeweight="1.5pt" strokecolor="#FFFFFF" fillcolor="#3fb9bc"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#e8f4dc; font-family:Arial, sans-serif; font-size:22px"><![endif]--><a href="https://www.ireholidays.com/" target="_blank" style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#3fb9bc;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:45px;padding-right:45px;font-size:22px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break:break-word;"><span style="line-height: 44px;" dir="ltr" data-mce-style>VISIT IN WEBSITE</span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="row row-17" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 680px;" width="680">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 30px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
-																<div class="alignment" align="center" style="line-height:10px"><img class="big" src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1741/blue-bottom.png" style="display: block; height: auto; border: 0; width: 680px; max-width: 100%;" width="680" alt="Image" title="Image"></div>
+																<div class="alignment" align="center"><!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:68px;width:237px;v-text-anchor:middle;" arcsize="52%" strokeweight="1.5pt" strokecolor="#FFFFFF" fillcolor="#f08619"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#e8f4dc; font-family:Arial, sans-serif; font-size:22px"><![endif]--><a href="https://www.ireholidays.com/" target="_blank" style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#f08619;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:45px;padding-right:45px;font-size:22px;display:inline-block;letter-spacing:normal;"><span dir="ltr" style="word-break:break-word;"><span style="line-height: 44px;" dir="ltr" data-mce-style>VISIT IN WEBSITE</span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
 															</td>
 														</tr>
 													</table>
