fix: null and add address to eamil

--- a/KingfoodIO/wwwroot/html/new_meals.html
+++ b/KingfoodIO/wwwroot/html/new_meals.html
@@ -646,7 +646,8 @@
 															<td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #808080; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="font-size:14px;color:#ffffff;">Contact Us: <a href="mailto:info@groupmeals.com">info@groupmeals.com</a></span></p>
+																			<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="font-size:14px;color:#ffffff;">Contact Us: <a href="mailto:info@groupmeals.com">info@groupmeals.com</a></span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="font-size:14px;color:#ffffff;">Address: Ireland, Dublin1, D01 X368	</span></p>
 																	</div>
 																</div>
 															</td>
