--- a/KingfoodIO/wwwroot/html/system_message.html
+++ b/KingfoodIO/wwwroot/html/system_message.html
@@ -119,7 +119,7 @@
                                                                     style="line-height:10px"><a
                                                                         href="http://www.example.com/" target="_blank"
                                                                         style="outline:none" tabindex="-1"><img
-                                                                            src="https://82e0055852.imgdist.com/public/users/Integrators/BeeProAgency/981669_966328/logo_sticky1.png"
+                                                                            src="https://wiiyaimage.blob.core.windows.net/images/longlogo.png"
                                                                             style="display: block; height: auto; border: 0; width: 187px; max-width: 100%;"
                                                                             width="187" alt="Logo" title="Logo"></a>
                                                                 </div>
@@ -348,41 +348,6 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="row row-6" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
-                        role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <table class="row-content stack" align="center" border="0" cellpadding="0"
-                                        cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 680px;"
-                                        width="680">
-                                        <tbody>
-                                            <tr>
-                                                <td class="column column-1" width="100%"
-                                                    style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-                                                    <table class="image_block block-1" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
-                                                            <td class="pad"
-                                                                style="width:100%;padding-right:0px;padding-left:0px;">
-                                                                <div class="alignment" align="center"
-                                                                    style="line-height:10px"><img class="big"
-                                                                        src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1741/blue-top.png"
-                                                                        style="display: block; height: auto; border: 0; width: 680px; max-width: 100%;"
-                                                                        width="680" alt="Image" title="Image"></div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                     <table class="row row-7" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
                         role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tbody>
@@ -495,41 +460,6 @@
                                                                         </span>
                                                                     </a><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                                                 </div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="row row-8" align="center" width="100%" border="0" cellpadding="0" cellspacing="0"
-                        role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <table class="row-content stack" align="center" border="0" cellpadding="0"
-                                        cellspacing="0" role="presentation"
-                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 680px;"
-                                        width="680">
-                                        <tbody>
-                                            <tr>
-                                                <td class="column column-1" width="100%"
-                                                    style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 30px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-                                                    <table class="image_block block-1" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                                        <tr>
-                                                            <td class="pad"
-                                                                style="width:100%;padding-right:0px;padding-left:0px;">
-                                                                <div class="alignment" align="center"
-                                                                    style="line-height:10px"><img class="big"
-                                                                        src="https://d1oco4z2z1fhwp.cloudfront.net/templates/default/1741/blue-bottom.png"
-                                                                        style="display: block; height: auto; border: 0; width: 680px; max-width: 100%;"
-                                                                        width="680" alt="Image" title="Image"></div>
                                                             </td>
                                                         </tr>
                                                     </table>
