feat: new registration

--- a/KingfoodIO/wwwroot/html/verify_code.html
+++ b/KingfoodIO/wwwroot/html/verify_code.html
@@ -165,10 +165,10 @@
                                                                         style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #f08619; line-height: 1.2;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
-                                                                            <span style="font-size:50px;"><strong>Forget Password</strong></span></p>   
+                                                                            <span style="font-size:50px;"><strong>@Model.title</strong></span></p>   
                                                                             <p
                                                                             style="margin: 0; font-size: 10px; text-align: center; mso-line-height-alt: 10.8px;">
-                                                                            <span style="font-size:30px;"><strong>忘记密码</strong></span></p>
+                                                                            <span style="font-size:30px;"><strong>@Model.titleCN</strong></span></p>
                                                                     </div>
                                                                 </div>
                                                             </td>
@@ -185,9 +185,7 @@
                                                                         style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #555555; line-height: 1.5;">
                                                                         <p
                                                                             style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;">
-                                                                            To add color to your travel experience in
-                                                                            Ireland, we offer a variety of customized
-                                                                            day Tours.</p>
+                                                                           </p>
                                                                     </div>
                                                                 </div>
                                                             </td>
