fix: email time bug

--- a/KingfoodIO/wwwroot/html/cancel_meals_restaurant.html
+++ b/KingfoodIO/wwwroot/html/cancel_meals_restaurant.html
@@ -264,7 +264,7 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:0px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">@Model.detail.SelectDateTime</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;">@Model.selectDateTimeStr</span></p>
 																	</div>
 																</div>
 															</td>
@@ -340,6 +340,7 @@
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
 																			<span style="font-size:16px;">@Model.booking.CustomerEmail</span>
 																		</p>
+																	 
 
 																	</div>
 																</div>
