--- a/KingfoodIO/wwwroot/html/meal_declined.html
+++ b/KingfoodIO/wwwroot/html/meal_declined.html
@@ -479,7 +479,9 @@
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
 																			<span style="font-size:16px;">@Model.bookingDetail.RestaurantEmail</span>
 																		</p>
-
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 24px;">
+																			<span style="font-size:16px;">@Model.bookingDetail.EmergencyPhone</span>
+																		</p>
 																	</div>
 																</div>
 															</td>
@@ -535,7 +537,7 @@
 															<td class="pad" style="padding-bottom:5px;padding-left:35px;padding-right:20px;padding-top:0px;">
 																<div style="font-family: Arial, sans-serif">
 																	<div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #f08619; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Detail：</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">Details：</span></p>
 																		<p style="margin: 0; font-size: 14px; text-align: left; mso-line-height-alt: 25.5px;"><span style="font-size:17px;color:#f08619;">明细：</span></p>
 																	</div>
 																</div>
